# edr

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
edr/: Cargo.toml  build.rs
edr-common/: Cargo.toml
edr-common/src/: lib.rs
edr-ebpf/: Cargo.toml
edr-ebpf/src/: main.rs
edr/src/: agent.rs  event.rs  identity.rs  main.rs  model.rs  syscalls.rs  train.rs  util.rs
